Ronn-NG CHANGES
===============

Version 0.8.0 (???? ??? ??)
---------------------------

* Added tables support. (apjanke)
* Lint & Rubocop fixes. (apjanke)

Version 0.7.4 (2018 Dec 22)
---------------------------

* Forked Ronn-NG from original Ronn. (apjanke)
* Minor bug fixes: #4, #5 (apjanke)

Original Ronn CHANGES
=====================

Version 0.7.3 (2010 June 24)
----------------------------

* Fixed a major bug in roff output due to overly aggressive doublequote
  escaping. Paragraphs and code blocks were not being displayed if they
  included a double-quote character. (rtomayko, pawelz)

Version 0.7.0 (2010 June 21)
----------------------------

* HTML: Manual references (like 'grep(1)', 'ls(1)', etc.) are now hyperlinked
  based on a set of name -> URL mappings defined in an index.txt file. The index
  may also define links to things that aren't manuals for use in markdown
  reference-style links. See the ronn(1) manual on LINK INDEXES for more
  inforation: <http://rtomayko.github.com/ronn/ronn.1.html#LINK-INDEXES>
  (rtomayko)

* ROFF: Fixed a bug where multiple dot characters (.) at the beginning of a
  line were not being escaped properly and were not displayed when viewed
  in the terminal. (rtomayko)

* ROFF: Non-breaking space characters (&nbsp;) can now be used to control line
  wrap in roff output. (rtomayko)

* ROFF: Named HTML entities like &bull;, &trade;, &copy;, and &mdash; are now
  converted to their roff escaped equivalents. (rtomayko)

* An undocumented --markdown format option argument has been added to ronn(1).
  When given, ronn generates a <name>.<section>.markdown file with the
  post-processed markdown text. This is mostly useful for debugging but may be
  useful for converting ronn-format to 100% compatible markdown text.
  (rtomayko)

* The ronn(5) manpage is now known as ronn-format(7) (section 5 is limited
  to configuration files and stuff like that historically). The old ronn(7)